# syslog-ng-7.0-core

./: .gitignore  .gitmodules  Makefile.am  NEWS  VERSION  autogen.sh  configure.ac  ose-release.sh  syslog-ng-add-contextual-data.pc.in  syslog-ng.pc.in
contrib/: Makefile.am
debian/: Makefile.am  changelog.in  control
lib/: Makefile.am  cfg.c  logsource.c  logwriter.c  mainloop.c  mainloop.h  pe-versioning.h  versioning.h
lib/compat/: Makefile.am  glib.c  glib.h
lib/logmsg/: logmsg.h  nvtable-serialize-legacy.c  nvtable-serialize.c  nvtable-serialize.h  nvtable.c  nvtable.h
lib/logproto/: logproto-server.h
lib/stats/: stats-cluster.c  stats-cluster.h
libtest/: Makefile.am
modules/: Makefile.am
modules/add-contextual-data/: Makefile.am  add-contextual-data-filter-selector.c  add-contextual-data-filter-selector.h  add-contextual-data-grammar.ym  add-contextual-data-parser.c  add-contextual-data-selector.h  add-contextual-data-template-selector.c  add-contextual-data.c  add-contextual-data.h  context-info-db.c
modules/add-contextual-data-selector-filter/: Makefile.am  add-contextual-data-selector-filter-grammar.ym  add-contextual-data-selector-filter-parser.c  add-contextual-data-selector-filter-parser.h  add-contextual-data-selector-filter-plugin.c  add-contextual-data-selector-filter.c  add-contextual-data-selector-filter.h
modules/add-contextual-data/tests/: Makefile.am  test_context_info_db.c  test_read_filters_from_cfg.c  test_selector.c
modules/affile/: affile-dest-internal-queue-filter.h  affile-dest.c
modules/afmongodb/: afmongodb.c
modules/afsmtp/: afsmtp.c
modules/afsql/: afsql.c
modules/dbparser/: patterndb.c  pdb-load.c
modules/dbparser/tests/: test_patterndb.c
modules/java-modules/: build.gradle  internal_repositories.gradle
modules/java/native/: java-destination.c
pe-build/: build
sbuild/: config.yml  configure_opts.py
scl/: Makefile.am  syslog-ng.conf
scl/rule-engine/: plugin.conf
srelease/: platforms
syslog-ng/: main.c
syslog-ng-ctl/: syslog-ng-ctl.c
tests/unit/: Makefile.am
tgz2build/: rules  syslog-ng.files  tgz2deps
